[tool.poetry]
name = "food_database"
version = "0.1.0"
description = ""
authors = ["taka-kawa <ta6ka4shi@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
black = "^21.10b0"
flake8 = "^4.0.1"
pandas = "^1.3.4"
plotly = "^5.3.1"
isort = "^5.10.1"
numpy = "^1.21.4"
jupyter = "^1.0.0"
jupyterlab = "^3.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
